tests/compile_pass/public_headers/adapt_void.cpp
#include <pb/adapt/void_adapter.hpp>

int pb_public_header_adapt_void() { return 0; }
